3.0 (in development)
------------------------------------------------------------------------
- New script: Generate object JSON data from vanilla game or DAT object
- New script: Recolor any compatible PNG files with recolorable color 1
- New script: Zip all object files in the repo
- New script: Zip and install all parkobj files in the repo
- New object: Base Block (toontowner.scenery_small.xxbbbr01)
- New object: Sphinx (rct2.scenery_large.sspx)
- New object: Pyramid (rct2.scenery_large.spyr)
- New object: Wooden Post Wall (couger.scenery_wall.acwwf32)
- New object: Wooden Post Wall (couger.scenery_wall.acww33)
- New object: Dinosaur (rct2.scenery_large.sdn1)
- New object: Dinosaur (rct2.scenery_large.sdn2)
- New object: Dinosaur (rct2.scenery_large.sdn3)
- New object: Roof (toontowner.scenery_small.ttrfwd01)
- New object: Roof (toontowner.scenery_small.ttrfwd02)
- New object: Roof (toontowner.scenery_small.ttrfwd03)
- New object: Roof (toontowner.scenery_small.ttrfwd04)
- New object: Roof (toontowner.scenery_small.ttrfwd06)
- New object: Roof (toontowner.scenery_small.ttrfwd07)
- New object: Roof (toontowner.scenery_small.ttrfwd08)
- New object: Vine Tree (rct2ww.scenery_small.1x1atre2)
- New object: Roman Palace Corner Piece (rct2tt.scenery_large.corns2x2)
- New object: Small Speaker (rct2tt.scenery_small.speakr01)
- Fixed object: Incense Cedar Tree (rct2.scenery_small.tic)
- Fixed object: Lawson Cypress Tree (rct2.scenery_small.tlc)
- Fixed object: Monterey Cypress Tree (rct2.scenery_small.tmc)
- Fixed object: Monkey-Puzzle Tree (rct2.scenery_small.tmp)
- Fixed object: Italian Cypress Tree (rct2.scenery_small.titc)
- Fixed object: Golden Hinoki Cypress Tree (rct2.scenery_small.tghc)
- Fixed object: Arizona Cypress Tree (rct2.scenery_small.tac)
- Fixed object: Meyer's Blue Juniper Tree (rct2.scenery_small.tmbj)
- Fixed object: Cedar of Lebanon Tree (rct2.scenery_small.tcl)
- Fixed object: European Larch Tree (rct2.scenery_small.tel)